parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> declarations
Rule 2     declarations -> declarations declaration
Rule 3     declarations -> declaration
Rule 4     declaration -> var_decl SEMICOLON
Rule 5     declaration -> function_decl
Rule 6     var_decl -> type IDENTIFIER
Rule 7     var_decl -> type IDENTIFIER ASSIGN expression
Rule 8     type -> INT
Rule 9     type -> FLOAT
Rule 10    type -> CHAR_TYPE
Rule 11    type -> VOID
Rule 12    function_decl -> type IDENTIFIER LPAREN params RPAREN block
Rule 13    params -> param_list
Rule 14    params -> empty
Rule 15    param_list -> param_list COMMA param
Rule 16    param_list -> param
Rule 17    param -> type IDENTIFIER
Rule 18    block -> LBRACE statements RBRACE
Rule 19    statements -> statements statement
Rule 20    statements -> empty
Rule 21    statement -> expression_statement
Rule 22    statement -> var_decl SEMICOLON
Rule 23    statement -> if_statement
Rule 24    statement -> while_statement
Rule 25    statement -> for_statement
Rule 26    statement -> return_statement
Rule 27    statement -> block
Rule 28    expression_statement -> expression SEMICOLON
Rule 29    expression_statement -> SEMICOLON
Rule 30    if_statement -> IF LPAREN expression RPAREN statement
Rule 31    if_statement -> IF LPAREN expression RPAREN statement ELSE statement
Rule 32    while_statement -> WHILE LPAREN expression RPAREN statement
Rule 33    for_statement -> FOR LPAREN for_init SEMICOLON for_cond SEMICOLON for_update RPAREN statement
Rule 34    for_init -> var_decl
Rule 35    for_init -> expression
Rule 36    for_init -> empty
Rule 37    for_cond -> expression
Rule 38    for_cond -> empty
Rule 39    for_update -> expression
Rule 40    for_update -> empty
Rule 41    return_statement -> RETURN expression SEMICOLON
Rule 42    return_statement -> RETURN SEMICOLON
Rule 43    expression -> expression PLUS expression
Rule 44    expression -> expression MINUS expression
Rule 45    expression -> expression MULTIPLY expression
Rule 46    expression -> expression DIVIDE expression
Rule 47    expression -> expression EQ expression
Rule 48    expression -> expression NE expression
Rule 49    expression -> expression LT expression
Rule 50    expression -> expression GT expression
Rule 51    expression -> expression LE expression
Rule 52    expression -> expression GE expression
Rule 53    expression -> expression AND expression
Rule 54    expression -> expression OR expression
Rule 55    expression -> NOT expression
Rule 56    expression -> MINUS expression
Rule 57    expression -> LPAREN expression RPAREN
Rule 58    expression -> IDENTIFIER ASSIGN expression
Rule 59    expression -> primary
Rule 60    primary -> INTEGER
Rule 61    primary -> FLOAT_NUMBER
Rule 62    primary -> STRING
Rule 63    primary -> CHAR
Rule 64    primary -> IDENTIFIER
Rule 65    primary -> function_call
Rule 66    function_call -> IDENTIFIER LPAREN args RPAREN
Rule 67    args -> arg_list
Rule 68    args -> empty
Rule 69    arg_list -> arg_list COMMA expression
Rule 70    arg_list -> expression
Rule 71    empty -> <empty>

Terminals, with rules where they appear

AND                  : 53
ASSIGN               : 7 58
CHAR                 : 63
CHAR_TYPE            : 10
COMMA                : 15 69
DIVIDE               : 46
ELSE                 : 31
EQ                   : 47
FLOAT                : 9
FLOAT_NUMBER         : 61
FOR                  : 33
GE                   : 52
GT                   : 50
IDENTIFIER           : 6 7 12 17 58 64 66
IF                   : 30 31
INT                  : 8
INTEGER              : 60
LBRACE               : 18
LE                   : 51
LPAREN               : 12 30 31 32 33 57 66
LT                   : 49
MINUS                : 44 56
MULTIPLY             : 45
NE                   : 48
NOT                  : 55
OR                   : 54
PLUS                 : 43
RBRACE               : 18
RETURN               : 41 42
RPAREN               : 12 30 31 32 33 57 66
SEMICOLON            : 4 22 28 29 33 33 41 42
STRING               : 62
VOID                 : 11
WHILE                : 32
error                : 

Nonterminals, with rules where they appear

arg_list             : 67 69
args                 : 66
block                : 12 27
declaration          : 2 3
declarations         : 1 2
empty                : 14 20 36 38 40 68
expression           : 7 28 30 31 32 35 37 39 41 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 56 57 58 69 70
expression_statement : 21
for_cond             : 33
for_init             : 33
for_statement        : 25
for_update           : 33
function_call        : 65
function_decl        : 5
if_statement         : 23
param                : 15 16
param_list           : 13 15
params               : 12
primary              : 59
program              : 0
return_statement     : 26
statement            : 19 30 31 31 32 33
statements           : 18 19
type                 : 6 7 12 17
var_decl             : 4 22 34
while_statement      : 24

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . declarations
    (2) declarations -> . declarations declaration
    (3) declarations -> . declaration
    (4) declaration -> . var_decl SEMICOLON
    (5) declaration -> . function_decl
    (6) var_decl -> . type IDENTIFIER
    (7) var_decl -> . type IDENTIFIER ASSIGN expression
    (12) function_decl -> . type IDENTIFIER LPAREN params RPAREN block
    (8) type -> . INT
    (9) type -> . FLOAT
    (10) type -> . CHAR_TYPE
    (11) type -> . VOID

    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR_TYPE       shift and go to state 9
    VOID            shift and go to state 10

    program                        shift and go to state 1
    declarations                   shift and go to state 2
    declaration                    shift and go to state 3
    var_decl                       shift and go to state 4
    function_decl                  shift and go to state 5
    type                           shift and go to state 6

state 1

    (0) S' -> program .



state 2

    (1) program -> declarations .
    (2) declarations -> declarations . declaration
    (4) declaration -> . var_decl SEMICOLON
    (5) declaration -> . function_decl
    (6) var_decl -> . type IDENTIFIER
    (7) var_decl -> . type IDENTIFIER ASSIGN expression
    (12) function_decl -> . type IDENTIFIER LPAREN params RPAREN block
    (8) type -> . INT
    (9) type -> . FLOAT
    (10) type -> . CHAR_TYPE
    (11) type -> . VOID

    $end            reduce using rule 1 (program -> declarations .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR_TYPE       shift and go to state 9
    VOID            shift and go to state 10

    declaration                    shift and go to state 11
    var_decl                       shift and go to state 4
    function_decl                  shift and go to state 5
    type                           shift and go to state 6

state 3

    (3) declarations -> declaration .

    INT             reduce using rule 3 (declarations -> declaration .)
    FLOAT           reduce using rule 3 (declarations -> declaration .)
    CHAR_TYPE       reduce using rule 3 (declarations -> declaration .)
    VOID            reduce using rule 3 (declarations -> declaration .)
    $end            reduce using rule 3 (declarations -> declaration .)


state 4

    (4) declaration -> var_decl . SEMICOLON

    SEMICOLON       shift and go to state 12


state 5

    (5) declaration -> function_decl .

    INT             reduce using rule 5 (declaration -> function_decl .)
    FLOAT           reduce using rule 5 (declaration -> function_decl .)
    CHAR_TYPE       reduce using rule 5 (declaration -> function_decl .)
    VOID            reduce using rule 5 (declaration -> function_decl .)
    $end            reduce using rule 5 (declaration -> function_decl .)


state 6

    (6) var_decl -> type . IDENTIFIER
    (7) var_decl -> type . IDENTIFIER ASSIGN expression
    (12) function_decl -> type . IDENTIFIER LPAREN params RPAREN block

    IDENTIFIER      shift and go to state 13


state 7

    (8) type -> INT .

    IDENTIFIER      reduce using rule 8 (type -> INT .)


state 8

    (9) type -> FLOAT .

    IDENTIFIER      reduce using rule 9 (type -> FLOAT .)


state 9

    (10) type -> CHAR_TYPE .

    IDENTIFIER      reduce using rule 10 (type -> CHAR_TYPE .)


state 10

    (11) type -> VOID .

    IDENTIFIER      reduce using rule 11 (type -> VOID .)


state 11

    (2) declarations -> declarations declaration .

    INT             reduce using rule 2 (declarations -> declarations declaration .)
    FLOAT           reduce using rule 2 (declarations -> declarations declaration .)
    CHAR_TYPE       reduce using rule 2 (declarations -> declarations declaration .)
    VOID            reduce using rule 2 (declarations -> declarations declaration .)
    $end            reduce using rule 2 (declarations -> declarations declaration .)


state 12

    (4) declaration -> var_decl SEMICOLON .

    INT             reduce using rule 4 (declaration -> var_decl SEMICOLON .)
    FLOAT           reduce using rule 4 (declaration -> var_decl SEMICOLON .)
    CHAR_TYPE       reduce using rule 4 (declaration -> var_decl SEMICOLON .)
    VOID            reduce using rule 4 (declaration -> var_decl SEMICOLON .)
    $end            reduce using rule 4 (declaration -> var_decl SEMICOLON .)


state 13

    (6) var_decl -> type IDENTIFIER .
    (7) var_decl -> type IDENTIFIER . ASSIGN expression
    (12) function_decl -> type IDENTIFIER . LPAREN params RPAREN block

    SEMICOLON       reduce using rule 6 (var_decl -> type IDENTIFIER .)
    ASSIGN          shift and go to state 14
    LPAREN          shift and go to state 15


state 14

    (7) var_decl -> type IDENTIFIER ASSIGN . expression
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression MULTIPLY expression
    (46) expression -> . expression DIVIDE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NE expression
    (49) expression -> . expression LT expression
    (50) expression -> . expression GT expression
    (51) expression -> . expression LE expression
    (52) expression -> . expression GE expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . NOT expression
    (56) expression -> . MINUS expression
    (57) expression -> . LPAREN expression RPAREN
    (58) expression -> . IDENTIFIER ASSIGN expression
    (59) expression -> . primary
    (60) primary -> . INTEGER
    (61) primary -> . FLOAT_NUMBER
    (62) primary -> . STRING
    (63) primary -> . CHAR
    (64) primary -> . IDENTIFIER
    (65) primary -> . function_call
    (66) function_call -> . IDENTIFIER LPAREN args RPAREN

    NOT             shift and go to state 19
    MINUS           shift and go to state 18
    LPAREN          shift and go to state 20
    IDENTIFIER      shift and go to state 16
    INTEGER         shift and go to state 22
    FLOAT_NUMBER    shift and go to state 23
    STRING          shift and go to state 24
    CHAR            shift and go to state 25

    expression                     shift and go to state 17
    primary                        shift and go to state 21
    function_call                  shift and go to state 26

state 15

    (12) function_decl -> type IDENTIFIER LPAREN . params RPAREN block
    (13) params -> . param_list
    (14) params -> . empty
    (15) param_list -> . param_list COMMA param
    (16) param_list -> . param
    (71) empty -> .
    (17) param -> . type IDENTIFIER
    (8) type -> . INT
    (9) type -> . FLOAT
    (10) type -> . CHAR_TYPE
    (11) type -> . VOID

    RPAREN          reduce using rule 71 (empty -> .)
    INT             shift and go to state 7
    FLOAT           shift and go to state 8
    CHAR_TYPE       shift and go to state 9
    VOID            shift and go to state 10

    type                           shift and go to state 27
    params                         shift and go to state 28
    param_list                     shift and go to state 29
    empty                          shift and go to state 30
    param                          shift and go to state 31

state 16

    (58) expression -> IDENTIFIER . ASSIGN expression
    (64) primary -> IDENTIFIER .
    (66) function_call -> IDENTIFIER . LPAREN args RPAREN

    ASSIGN          shift and go to state 32
    PLUS            reduce using rule 64 (primary -> IDENTIFIER .)
    MINUS           reduce using rule 64 (primary -> IDENTIFIER .)
    MULTIPLY        reduce using rule 64 (primary -> IDENTIFIER .)
    DIVIDE          reduce using rule 64 (primary -> IDENTIFIER .)
    EQ              reduce using rule 64 (primary -> IDENTIFIER .)
    NE              reduce using rule 64 (primary -> IDENTIFIER .)
    LT              reduce using rule 64 (primary -> IDENTIFIER .)
    GT              reduce using rule 64 (primary -> IDENTIFIER .)
    LE              reduce using rule 64 (primary -> IDENTIFIER .)
    GE              reduce using rule 64 (primary -> IDENTIFIER .)
    AND             reduce using rule 64 (primary -> IDENTIFIER .)
    OR              reduce using rule 64 (primary -> IDENTIFIER .)
    SEMICOLON       reduce using rule 64 (primary -> IDENTIFIER .)
    RPAREN          reduce using rule 64 (primary -> IDENTIFIER .)
    COMMA           reduce using rule 64 (primary -> IDENTIFIER .)
    LPAREN          shift and go to state 33


state 17

    (7) var_decl -> type IDENTIFIER ASSIGN expression .
    (43) expression -> expression . PLUS expression
    (44) expression -> expression . MINUS expression
    (45) expression -> expression . MULTIPLY expression
    (46) expression -> expression . DIVIDE expression
    (47) expression -> expression . EQ expression
    (48) expression -> expression . NE expression
    (49) expression -> expression . LT expression
    (50) expression -> expression . GT expression
    (51) expression -> expression . LE expression
    (52) expression -> expression . GE expression
    (53) expression -> expression . AND expression
    (54) expression -> expression . OR expression

    SEMICOLON       reduce using rule 7 (var_decl -> type IDENTIFIER ASSIGN expression .)
    PLUS            shift and go to state 34
    MINUS           shift and go to state 35
    MULTIPLY        shift and go to state 36
    DIVIDE          shift and go to state 37
    EQ              shift and go to state 38
    NE              shift and go to state 39
    LT              shift and go to state 40
    GT              shift and go to state 41
    LE              shift and go to state 42
    GE              shift and go to state 43
    AND             shift and go to state 44
    OR              shift and go to state 45


state 18

    (56) expression -> MINUS . expression
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression MULTIPLY expression
    (46) expression -> . expression DIVIDE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NE expression
    (49) expression -> . expression LT expression
    (50) expression -> . expression GT expression
    (51) expression -> . expression LE expression
    (52) expression -> . expression GE expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . NOT expression
    (56) expression -> . MINUS expression
    (57) expression -> . LPAREN expression RPAREN
    (58) expression -> . IDENTIFIER ASSIGN expression
    (59) expression -> . primary
    (60) primary -> . INTEGER
    (61) primary -> . FLOAT_NUMBER
    (62) primary -> . STRING
    (63) primary -> . CHAR
    (64) primary -> . IDENTIFIER
    (65) primary -> . function_call
    (66) function_call -> . IDENTIFIER LPAREN args RPAREN

    NOT             shift and go to state 19
    MINUS           shift and go to state 18
    LPAREN          shift and go to state 20
    IDENTIFIER      shift and go to state 16
    INTEGER         shift and go to state 22
    FLOAT_NUMBER    shift and go to state 23
    STRING          shift and go to state 24
    CHAR            shift and go to state 25

    expression                     shift and go to state 46
    primary                        shift and go to state 21
    function_call                  shift and go to state 26

state 19

    (55) expression -> NOT . expression
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression MULTIPLY expression
    (46) expression -> . expression DIVIDE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NE expression
    (49) expression -> . expression LT expression
    (50) expression -> . expression GT expression
    (51) expression -> . expression LE expression
    (52) expression -> . expression GE expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . NOT expression
    (56) expression -> . MINUS expression
    (57) expression -> . LPAREN expression RPAREN
    (58) expression -> . IDENTIFIER ASSIGN expression
    (59) expression -> . primary
    (60) primary -> . INTEGER
    (61) primary -> . FLOAT_NUMBER
    (62) primary -> . STRING
    (63) primary -> . CHAR
    (64) primary -> . IDENTIFIER
    (65) primary -> . function_call
    (66) function_call -> . IDENTIFIER LPAREN args RPAREN

    NOT             shift and go to state 19
    MINUS           shift and go to state 18
    LPAREN          shift and go to state 20
    IDENTIFIER      shift and go to state 16
    INTEGER         shift and go to state 22
    FLOAT_NUMBER    shift and go to state 23
    STRING          shift and go to state 24
    CHAR            shift and go to state 25

    expression                     shift and go to state 47
    primary                        shift and go to state 21
    function_call                  shift and go to state 26

state 20

    (57) expression -> LPAREN . expression RPAREN
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression MULTIPLY expression
    (46) expression -> . expression DIVIDE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NE expression
    (49) expression -> . expression LT expression
    (50) expression -> . expression GT expression
    (51) expression -> . expression LE expression
    (52) expression -> . expression GE expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . NOT expression
    (56) expression -> . MINUS expression
    (57) expression -> . LPAREN expression RPAREN
    (58) expression -> . IDENTIFIER ASSIGN expression
    (59) expression -> . primary
    (60) primary -> . INTEGER
    (61) primary -> . FLOAT_NUMBER
    (62) primary -> . STRING
    (63) primary -> . CHAR
    (64) primary -> . IDENTIFIER
    (65) primary -> . function_call
    (66) function_call -> . IDENTIFIER LPAREN args RPAREN

    NOT             shift and go to state 19
    MINUS           shift and go to state 18
    LPAREN          shift and go to state 20
    IDENTIFIER      shift and go to state 16
    INTEGER         shift and go to state 22
    FLOAT_NUMBER    shift and go to state 23
    STRING          shift and go to state 24
    CHAR            shift and go to state 25

    expression                     shift and go to state 48
    primary                        shift and go to state 21
    function_call                  shift and go to state 26

state 21

    (59) expression -> primary .

    PLUS            reduce using rule 59 (expression -> primary .)
    MINUS           reduce using rule 59 (expression -> primary .)
    MULTIPLY        reduce using rule 59 (expression -> primary .)
    DIVIDE          reduce using rule 59 (expression -> primary .)
    EQ              reduce using rule 59 (expression -> primary .)
    NE              reduce using rule 59 (expression -> primary .)
    LT              reduce using rule 59 (expression -> primary .)
    GT              reduce using rule 59 (expression -> primary .)
    LE              reduce using rule 59 (expression -> primary .)
    GE              reduce using rule 59 (expression -> primary .)
    AND             reduce using rule 59 (expression -> primary .)
    OR              reduce using rule 59 (expression -> primary .)
    SEMICOLON       reduce using rule 59 (expression -> primary .)
    RPAREN          reduce using rule 59 (expression -> primary .)
    COMMA           reduce using rule 59 (expression -> primary .)


state 22

    (60) primary -> INTEGER .

    PLUS            reduce using rule 60 (primary -> INTEGER .)
    MINUS           reduce using rule 60 (primary -> INTEGER .)
    MULTIPLY        reduce using rule 60 (primary -> INTEGER .)
    DIVIDE          reduce using rule 60 (primary -> INTEGER .)
    EQ              reduce using rule 60 (primary -> INTEGER .)
    NE              reduce using rule 60 (primary -> INTEGER .)
    LT              reduce using rule 60 (primary -> INTEGER .)
    GT              reduce using rule 60 (primary -> INTEGER .)
    LE              reduce using rule 60 (primary -> INTEGER .)
    GE              reduce using rule 60 (primary -> INTEGER .)
    AND             reduce using rule 60 (primary -> INTEGER .)
    OR              reduce using rule 60 (primary -> INTEGER .)
    SEMICOLON       reduce using rule 60 (primary -> INTEGER .)
    RPAREN          reduce using rule 60 (primary -> INTEGER .)
    COMMA           reduce using rule 60 (primary -> INTEGER .)


state 23

    (61) primary -> FLOAT_NUMBER .

    PLUS            reduce using rule 61 (primary -> FLOAT_NUMBER .)
    MINUS           reduce using rule 61 (primary -> FLOAT_NUMBER .)
    MULTIPLY        reduce using rule 61 (primary -> FLOAT_NUMBER .)
    DIVIDE          reduce using rule 61 (primary -> FLOAT_NUMBER .)
    EQ              reduce using rule 61 (primary -> FLOAT_NUMBER .)
    NE              reduce using rule 61 (primary -> FLOAT_NUMBER .)
    LT              reduce using rule 61 (primary -> FLOAT_NUMBER .)
    GT              reduce using rule 61 (primary -> FLOAT_NUMBER .)
    LE              reduce using rule 61 (primary -> FLOAT_NUMBER .)
    GE              reduce using rule 61 (primary -> FLOAT_NUMBER .)
    AND             reduce using rule 61 (primary -> FLOAT_NUMBER .)
    OR              reduce using rule 61 (primary -> FLOAT_NUMBER .)
    SEMICOLON       reduce using rule 61 (primary -> FLOAT_NUMBER .)
    RPAREN          reduce using rule 61 (primary -> FLOAT_NUMBER .)
    COMMA           reduce using rule 61 (primary -> FLOAT_NUMBER .)


state 24

    (62) primary -> STRING .

    PLUS            reduce using rule 62 (primary -> STRING .)
    MINUS           reduce using rule 62 (primary -> STRING .)
    MULTIPLY        reduce using rule 62 (primary -> STRING .)
    DIVIDE          reduce using rule 62 (primary -> STRING .)
    EQ              reduce using rule 62 (primary -> STRING .)
    NE              reduce using rule 62 (primary -> STRING .)
    LT              reduce using rule 62 (primary -> STRING .)
    GT              reduce using rule 62 (primary -> STRING .)
    LE              reduce using rule 62 (primary -> STRING .)
    GE              reduce using rule 62 (primary -> STRING .)
    AND             reduce using rule 62 (primary -> STRING .)
    OR              reduce using rule 62 (primary -> STRING .)
    SEMICOLON       reduce using rule 62 (primary -> STRING .)
    RPAREN          reduce using rule 62 (primary -> STRING .)
    COMMA           reduce using rule 62 (primary -> STRING .)


state 25

    (63) primary -> CHAR .

    PLUS            reduce using rule 63 (primary -> CHAR .)
    MINUS           reduce using rule 63 (primary -> CHAR .)
    MULTIPLY        reduce using rule 63 (primary -> CHAR .)
    DIVIDE          reduce using rule 63 (primary -> CHAR .)
    EQ              reduce using rule 63 (primary -> CHAR .)
    NE              reduce using rule 63 (primary -> CHAR .)
    LT              reduce using rule 63 (primary -> CHAR .)
    GT              reduce using rule 63 (primary -> CHAR .)
    LE              reduce using rule 63 (primary -> CHAR .)
    GE              reduce using rule 63 (primary -> CHAR .)
    AND             reduce using rule 63 (primary -> CHAR .)
    OR              reduce using rule 63 (primary -> CHAR .)
    SEMICOLON       reduce using rule 63 (primary -> CHAR .)
    RPAREN          reduce using rule 63 (primary -> CHAR .)
    COMMA           reduce using rule 63 (primary -> CHAR .)


state 26

    (65) primary -> function_call .

    PLUS            reduce using rule 65 (primary -> function_call .)
    MINUS           reduce using rule 65 (primary -> function_call .)
    MULTIPLY        reduce using rule 65 (primary -> function_call .)
    DIVIDE          reduce using rule 65 (primary -> function_call .)
    EQ              reduce using rule 65 (primary -> function_call .)
    NE              reduce using rule 65 (primary -> function_call .)
    LT              reduce using rule 65 (primary -> function_call .)
    GT              reduce using rule 65 (primary -> function_call .)
    LE              reduce using rule 65 (primary -> function_call .)
    GE              reduce using rule 65 (primary -> function_call .)
    AND             reduce using rule 65 (primary -> function_call .)
    OR              reduce using rule 65 (primary -> function_call .)
    SEMICOLON       reduce using rule 65 (primary -> function_call .)
    RPAREN          reduce using rule 65 (primary -> function_call .)
    COMMA           reduce using rule 65 (primary -> function_call .)


state 27

    (17) param -> type . IDENTIFIER

    IDENTIFIER      shift and go to state 49


state 28

    (12) function_decl -> type IDENTIFIER LPAREN params . RPAREN block

    RPAREN          shift and go to state 50


state 29

    (13) params -> param_list .
    (15) param_list -> param_list . COMMA param

    RPAREN          reduce using rule 13 (params -> param_list .)
    COMMA           shift and go to state 51


state 30

    (14) params -> empty .

    RPAREN          reduce using rule 14 (params -> empty .)


state 31

    (16) param_list -> param .

    COMMA           reduce using rule 16 (param_list -> param .)
    RPAREN          reduce using rule 16 (param_list -> param .)


state 32

    (58) expression -> IDENTIFIER ASSIGN . expression
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression MULTIPLY expression
    (46) expression -> . expression DIVIDE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NE expression
    (49) expression -> . expression LT expression
    (50) expression -> . expression GT expression
    (51) expression -> . expression LE expression
    (52) expression -> . expression GE expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . NOT expression
    (56) expression -> . MINUS expression
    (57) expression -> . LPAREN expression RPAREN
    (58) expression -> . IDENTIFIER ASSIGN expression
    (59) expression -> . primary
    (60) primary -> . INTEGER
    (61) primary -> . FLOAT_NUMBER
    (62) primary -> . STRING
    (63) primary -> . CHAR
    (64) primary -> . IDENTIFIER
    (65) primary -> . function_call
    (66) function_call -> . IDENTIFIER LPAREN args RPAREN

    NOT             shift and go to state 19
    MINUS           shift and go to state 18
    LPAREN          shift and go to state 20
    IDENTIFIER      shift and go to state 16
    INTEGER         shift and go to state 22
    FLOAT_NUMBER    shift and go to state 23
    STRING          shift and go to state 24
    CHAR            shift and go to state 25

    expression                     shift and go to state 52
    primary                        shift and go to state 21
    function_call                  shift and go to state 26

state 33

    (66) function_call -> IDENTIFIER LPAREN . args RPAREN
    (67) args -> . arg_list
    (68) args -> . empty
    (69) arg_list -> . arg_list COMMA expression
    (70) arg_list -> . expression
    (71) empty -> .
    (43) expression -> . expression PLUS expression
    (44) expression -> . expression MINUS expression
    (45) expression -> . expression MULTIPLY expression
    (46) expression -> . expression DIVIDE expression
    (47) expression -> . expression EQ expression
    (48) expression -> . expression NE expression
    (49) expression -> . expression LT expression
    (50) expression -> . expression GT expression
    (51) expression -> . expression LE expression
    (52) expression -> . expression GE expression
    (53) expression -> . expression AND expression
    (54) expression -> . expression OR expression
    (55) expression -> . NOT expression
    (56) expression -> . MINUS expression
    (57) expression -> . LPAREN expression RPAREN
    (58) expression -> . IDENTIFIER ASSIGN expression
